--- a/templates/blocks/advantages.html
+++ b/templates/blocks/advantages.html
@@ -1,5 +1,5 @@
 <section id="advantages" class="advantages">
-	<div class="advantages__wrap">
+	<div class="advantages__wrap owl-carousel js-slider-advantages">
 		
 		<figure class="advantages__item">
 			<i class="icon icon--formula"></i>
