--- a/templates/blocks/clients.html
+++ b/templates/blocks/clients.html
@@ -1,12 +1,11 @@
 <section class="clients">
-	<h2 class="title">Вже люблять FRED</h2>
-	<div class="owl-carousel owl-theme clients__wrap js-slider-clients">
-		<i class="icon icon--datahub"></i>
-		<i class="icon icon--projector"></i>
-		<i class="icon icon--ebsh"></i>
-		<i class="icon icon--chasopis"></i>
-		<i class="icon icon--freespace"></i>
-		<i class="icon icon--ciferblat"></i>
-	</div>
-
+    <h2 class="title">Вже люблять FRED</h2>
+    <div class="owl-carousel owl-theme js-slider-clients">
+        <i class="icon icon--datahub"></i>
+        <i class="icon icon--projector"></i>
+        <i class="icon icon--ebsh"></i>
+        <i class="icon icon--chasopis"></i>
+        <i class="icon icon--freespace"></i>
+        <i class="icon icon--ciferblat"></i>
+    </div>
 </section>
