--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -7,6 +7,7 @@
     height: 31rem;
     max-height: 100vh;
     position: relative;
+    z-index: 2;
     text-align: center;
     overflow: hidden;
 
@@ -56,8 +57,8 @@
 .nav__link {
     padding: 0 1.35em;
 
-    @media all and (max-width: 1024px - 1){
-    	padding: 0 1em;
+    @media all and (max-width: 1024px - 1) {
+        padding: 0 1em;
     }
 }
 
@@ -66,13 +67,8 @@
 }
 
 @media screen and (max-width: 768px) {
-    .hamburglar {
-        display: inline-block;
-    }
-
     .nav {
         visibility: hidden;
-        opacity: 0;
         position: absolute;
         top: 100%;
         left: 0;
@@ -86,15 +82,21 @@
         display: block;
     }
 
-    .nav__link {
-        display: block;
-        padding: 0 3rem;
+    .hamburglar {
+        display: inline-block;
     }
 
     .hamburglar.is-open~.nav {
-        visibility: visible;
-        opacity: 1;
-        transition: all 0.4s ease;
+        @include fadeInDown;
+    }
+
+    .hamburglar.is-closed~.nav {
+        @include fadeOutUp;
+    }
+
+    .nav__link {
+        display: block;
+        padding: 0 3rem;
     }
 }
 
@@ -132,7 +134,7 @@
     font-size: 39px;
     font-family: $garamond;
     font-style: italic;
-    
+
     @media all and (max-width: 480px) {
         font-size: 24px;
     }
