--- a/sass/blocks/_offers-delivery.scss
+++ b/sass/blocks/_offers-delivery.scss
@@ -5,6 +5,10 @@
     background-position: center bottom;
     display: none;
 
+    &.is-visible {
+    display: block;
+}
+
     .container {
         @include center-wrap (990px);
         padding: 0 2rem;
