--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -32,6 +32,10 @@
         color: #fffefe;
         text-shadow: 0 1px 0 rgba(104, 56, 8, 0.52);
 
+        @media all and (max-width: 320px - 1) {
+            font-size: 14px;
+        }
+
         &:hover {
             box-shadow: 0 10px 50px rgba(139, 57, 3, 0.36);
         }
@@ -49,6 +53,10 @@
         @media all and (max-width: 768px - 1) {
             padding: 0 0.5em;
             font-size: 22px;
+        }
+
+        @media all and (max-width: 320px - 1) {
+            font-size: 18px;
         }
     }
 
