max width are infinity, add favicon

--- a/templates/head.html
+++ b/templates/head.html
@@ -6,7 +6,7 @@
 	<title>Fred&Fresh</title>
 	<meta name="description" content="Fred and Fresh - вкусная и полезная еда. Обслуживание офисов. Вендинг. Кейтеринг. Доставка еды.">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<!-- <link rel="shortcut icon" href="favicon.png"> -->
+	<link rel="shortcut icon" href="favicon.png">
 	<link href="https://fonts.googleapis.com/css?family=EB+Garamond:400,400i,700|PT+Sans:400,700|PT+Serif:700i" rel="stylesheet">
 </head>
 <body>
