--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -40,7 +40,7 @@
         z-index: -1;
         top: 0;
         left: -220px;
-        width: $max-width;
+        width: 100vw;
         height: 100%;
         background-color: rgba(0, 0, 0, 0.4);
         box-shadow: 0 -1px 35px rgba(2, 4, 5, 0.75);
