--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -31,7 +31,11 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    line-height: 2;
+
+    @media all and (max-width: 1024px - 1) {
+        line-height: 2;
+        padding: 0 1rem;
+    }
 
     &::before {
         content: '';
@@ -40,7 +44,8 @@
         z-index: -1;
         top: 0;
         left: -220px;
-        width: 100vw;
+        width: 3000%;
+        // width: 100vw;
         height: 100%;
         background-color: rgba(0, 0, 0, 0.4);
         box-shadow: 0 -1px 35px rgba(2, 4, 5, 0.75);
