--- a/sass/blocks/_share.scss
+++ b/sass/blocks/_share.scss
@@ -6,7 +6,8 @@
 
     @media all and (min-width: 768px) {
         background-image: url(../images/share-bg.jpg);
-        background-size: cover;
+        // background-size: cover;
+        background-repeat: no-repeat;
         background-position: center bottom;
     }
 
