--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -28,7 +28,7 @@
         font-size: 16px;
         font-weight: 400;
         line-height: 1.875;
-        margin: 0 10px;
+        // margin: 0 10px;
         color: #fffefe;
         text-shadow: 0 1px 0 rgba(104, 56, 8, 0.52);
 
@@ -46,7 +46,8 @@
         font-size: 33px;
         font-weight: 400;
         line-height: 2;
-        padding: 5px 40px; // margin: 37px auto 0;
+        padding: 5px 40px;
+        // margin: 37px auto 0;
         margin: 0 auto;
         position: relative;
 
@@ -126,12 +127,12 @@
         transform-origin: bottom left;
     }
 
-    &--login {
-        &::before {
-            content: '';
-            margin-right: 0.5em;
-            @extend .icon,
-            .icon--login;
-        }
-    }
+    // &--login {
+    //     &::before {
+    //         content: '';
+    //         margin-right: 0.5em;
+    //         @extend .icon,
+    //         .icon--login;
+    //     }
+    // }
 }
