fix menu img url

--- a/templates/header.html
+++ b/templates/header.html
@@ -2,7 +2,7 @@
     <div class="header__wrap">
         @@include('blocks/burger.html')
         <nav class="nav">
-            <a href="#" class="nav__link link">Головна</a>
+            <a href="index.html" class="nav__link link">Головна</a>
             <a href="#menu" class="nav__link link">Меню</a>
             <a href="#offers" class="nav__link link">Пропонуємо</a>
             <a href="#advantages" class="nav__link link">Замовити</a>
